[gd_scene load_steps=8 format=3 uid="uid://drdpxo65tcqob"]

[ext_resource type="PackedScene" uid="uid://drpx64vwtj8ty" path="res://game/towers/_base/tower_base.tscn" id="1_tm4st"]
[ext_resource type="Script" path="res://game/towers/coral_hub/coral_hub.gd" id="2_0l1g7"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bj68l"]
albedo_color = Color(0.529543, 0.407836, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_xoei5"]
material = SubResource("StandardMaterial3D_bj68l")
height = 0.5

[sub_resource type="CylinderShape3D" id="CylinderShape3D_0deqm"]
height = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mnp0p"]
transparency = 1
diffuse_mode = 3
specular_mode = 1
disable_ambient_light = true
disable_fog = true
albedo_color = Color(0, 1, 0, 0.501961)

[sub_resource type="TorusMesh" id="TorusMesh_evdlh"]
material = SubResource("StandardMaterial3D_mnp0p")
inner_radius = 4.9
outer_radius = 5.0

[node name="CoralHub" instance=ExtResource("1_tm4st")]
collision_layer = 8
collision_mask = 15
script = ExtResource("2_0l1g7")
max_connections = 3

[node name="Model" type="MeshInstance3D" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
mesh = SubResource("CylinderMesh_xoei5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
shape = SubResource("CylinderShape3D_0deqm")

[node name="RangeIndicator" type="MeshInstance3D" parent="." index="2"]
unique_name_in_owner = true
mesh = SubResource("TorusMesh_evdlh")

[node name="ConnectionsLabel" type="Label3D" parent="." index="3"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
billboard = 1
double_sided = false
no_depth_test = true
text = "0 / 3"
font_size = 256
